2010-11-06  Glenn Morris  <rgm@gnu.org>

	* emulation/viper-cmd.el (viper-read-string-with-history):
	Prefix dynamic local `initial'.
	(viper-minibuffer-standard-hook): Update for above name change.

	* emacs-lisp/elint.el (elint-init-env): Prefix dynamic local `env'.
	(elint-init-form): Update for above name change.

	* mail/mail-extr.el (mail-extract-address-components): Give dynamic
	local variables `cbeg' and `cend' a prefix.
	(mail-extr-voodoo): Update for above name change.

	* textmodes/reftex-toc.el (reftex-toc-do-promote)
	(reftex-toc-promote-prepare): Pass `delta' as an explicit argument.
	(reftex-toc-promote-action): Doc fix.

	* textmodes/reftex-sel.el (reftex-select-item): Give local variables
	`prompt', `data' a prefix.
	(reftex-select-post-command-hook, reftex-select-callback)
	(reftex-select-mouse-accept, reftex-select-read-cite):
	Update for above name changes.

	* textmodes/reftex-ref.el (reftex-reference): Rename local variable
	`refstyle' to reftex-refstyle.
	(reftex-offer-label-menu): Update for above name change.
	* textmodes/reftex-sel.el (reftex-select-toggle-varioref): Update for
	`refstyle' name change.

	* vc/emerge.el (emerge-eval-in-buffer): Remove, and replace all uses
	with with-current-buffer.
	(diff, template): Give dynamic local variables a prefix.
	(emerge-line-numbers): Rename local `diff' to emerge-line-diff.
	(emerge-line-number-in-buf): Update for above name change.
	(emerge-combine-versions-internal): Rename local `template' to
	emerge-combine-template.
	(emerge-combine-versions-edit): Update for above name change.

2010-11-06  Ralf Angeli  <angeli@caeruleus.net>

	* textmodes/reftex-cite.el
	(reftex-extract-bib-entries-from-thebibliography): Match bibitem
	entries with whitespace after \bibitem.
	(reftex-create-bibtex-file): Match entries containing numbers and
	symbol constituents.  Make sure that entries with whitespace at
	various places are found.

2010-11-05  Christian Millour  <cm@abtela.com>  (tiny change)
